Updated examples and exercises

--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -9,21 +9,22 @@
     "\n",
     "### Setting up your keys\n",
     "\n",
-    "If you haven't done so already, you'll need to create API keys from OpenAI, Anthropic and Google\n",
+    "If you haven't done so already, you'll need to create API keys from OpenAI, Anthropic and Google.\n",
     "\n",
     "For OpenAI, visit https://openai.com/api/\n",
     "For Anthropic, visit https://console.anthropic.com/\n",
     "For Google, visit https://ai.google.dev/gemini-api\n",
     "\n",
-    "When you get your API keys, you need to set them as environment variables, such as described in the quickstart here:\n",
-    "https://platform.openai.com/docs/quickstart\n",
+    "When you get your API keys, you need to set them as environment variables.\n",
     "\n",
-    "Or create a file called .env in this project root directory, and set your keys there:\n",
+    "EITHER (recommended) create a file called .env in this project root directory, and set your keys there:\n",
     "```\n",
     "OPENAI_API_KEY=xxxx\n",
     "ANTHROPIC_API_KEY=xxxx\n",
     "GOOGLE_API_KEY=xxxx\n",
-    "````"
+    "````\n",
+    "\n",
+    "OR enter the keys directly in the cells below."
    ]
   },
   {
@@ -51,7 +52,10 @@
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
+    "os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
+    "os.environ['GOOGLE_API_KEY'] = os.getenv('GOOGLE_API_KEY', 'your-key-if-not-using-env')"
    ]
   },
   {
@@ -67,6 +71,17 @@
     "claude = anthropic.Anthropic()\n",
     "google.generativeai.configure()\n",
     "gemini = google.generativeai.GenerativeModel('gemini-pro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748dd333-328c-4b3e-be58-a71b396fdc92",
+   "metadata": {},
+   "source": [
+    "### Asking LLMs to tell a joke\n",
+    "\n",
+    "It turns out that LLMs don't do a great job of telling jokes! Let's compare a few models - let me know what you think in the chat.\n",
+    "Later we will be putting LLMs to better use!"
    ]
   },
   {
@@ -137,10 +152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Claude\n",
+    "# Claude 3.5 Sonnet\n",
     "\n",
     "message = claude.messages.create(\n",
-    "    model=\"claude-3-opus-20240229\",\n",
+    "    model=\"claude-3-5-sonnet-20240620\",\n",
     "    max_tokens=200,\n",
     "    temperature=1.0,\n",
     "    system=\"You are great at telling jokes\",\n",
