--- a/project1/parser.ipynb
+++ b/project1/parser.ipynb
@@ -50,7 +50,8 @@
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')"
    ]
   },
   {
@@ -117,14 +118,17 @@
    "source": [
     "# Let's try it for my resume\n",
     "\n",
-    "result = client.chat.completions.create(\n",
+    "response = client.chat.completions.create(\n",
     "          model=MODEL,\n",
     "          messages=[\n",
     "            {\"role\": \"system\", \"content\": instructions},\n",
     "            {\"role\": \"user\", \"content\": request + me}\n",
     "          ],\n",
-    "        response_format={ \"type\": \"json_object\" })\n",
-    "print(result.choices[0].message.content)"
+    "        response_format={ \"type\": \"json_object\" },\n",
+    "        stream=True)\n",
+    "for chunk in response:\n",
+    "    delta = chunk.choices[0].delta.content or ''\n",
+    "    print(delta, end='')"
    ]
   },
   {
@@ -165,64 +169,6 @@
     "    fn=parse,\n",
     "    inputs=[gr.Textbox(label=\"Text Resume\", lines=10)],\n",
     "    outputs=[gr.Textbox(label=\"HR-JSON Resume\", lines=10)],\n",
-    "    allow_flagging=\"never\"\n",
-    ")\n",
-    "\n",
-    "view.launch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f90f677-c6ed-4650-b731-6e2c59f2f820",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A simple variation to generate a summary of this resume, a very common Gen AI use case\n",
-    "\n",
-    "instructions = \"\"\"You are an assistant that can create a short summary of a candidate based on their resume.\n",
-    "The summary should be 4-5 sentences long and capture their experience and education.\"\"\"\n",
-    "\n",
-    "request = \"Please summarize this candidate based on their resume:\\n\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e03bb27-45b5-48da-b647-9fc50eb146df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate as before\n",
-    "\n",
-    "def parse(text_resume):\n",
-    "    response = client.chat.completions.create(\n",
-    "          model=MODEL,\n",
-    "          messages=[\n",
-    "            {\"role\": \"system\", \"content\": instructions},\n",
-    "            {\"role\": \"user\", \"content\": request + text_resume}\n",
-    "          ],\n",
-    "        stream=True\n",
-    "        )\n",
-    "    result = \"\"\n",
-    "    for chunk in response:\n",
-    "        result += chunk.choices[0].delta.content or \"\"\n",
-    "        yield result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0726883b-49fd-4529-aa03-6d9f3aee3943",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And in Gradio again\n",
-    "\n",
-    "view = gr.Interface(\n",
-    "    fn=parse,\n",
-    "    inputs=[gr.Textbox(label=\"Text Resume\", lines=10)],\n",
-    "    outputs=[gr.Textbox(label=\"Summary\", lines=10)],\n",
     "    allow_flagging=\"never\"\n",
     ")\n",
     "\n",
