--- a/project2/expert.ipynb
+++ b/project2/expert.ipynb
@@ -8,6 +8,7 @@
     "## Project 2: Expert\n",
     "\n",
     "### A question answering agent that is an expert in a new product being launched\n",
+    "### It's important that the answers are accurate.\n",
     "\n",
     "This project will use RAG (Retrieval Augmented Generation) to ensure our question/answering assistant has high accuracy"
    ]
@@ -48,7 +49,7 @@
     "# Load environment variables in a file called .env\n",
     "\n",
     "load_dotenv()\n",
-    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')"
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')"
    ]
   },
   {
@@ -78,6 +79,7 @@
    "outputs": [],
    "source": [
     "# Put it into a vector store\n",
+    "# FAISS is a library from Meta that allows for efficient similarity search\n",
     "\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
@@ -116,6 +118,16 @@
     "result = conversation_chain.invoke({\"question\": query})\n",
     "answer = result[\"answer\"]\n",
     "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbbcb659-13ce-47ab-8a5e-01b930494964",
+   "metadata": {},
+   "source": [
+    "## Now we will bring this up in Gradio using the Chat interface -\n",
+    "\n",
+    "A quick and easy way to prototype a chat with an LLM"
    ]
   },
   {
