--- a/project3/curator.ipynb
+++ b/project3/curator.ipynb
@@ -42,7 +42,7 @@
     "# Load environment variables in a file called .env\n",
     "\n",
     "load_dotenv()\n",
-    "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN')"
+    "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-hf-token-if-not-using-env')"
    ]
   },
   {
