--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c57b398b-3412-4b1b-ba17-b4e0a233e602",
+   "id": "70629249-1ff7-4638-8d44-5f07e67a071b",
    "metadata": {},
    "source": [
-    "## Using the leading Frontier LLMs via their APIs\n",
+    "# The 2nd Way to call Frontier Models - via their APIs\n",
     "\n",
-    "### Setting up your keys\n",
+    "In this notebook, we'll explore calling 3 Frontier Models using their APIs.\n",
+    "\n",
+    "In the last experiment, we tried out a prompt that was ideally suited to LLMs. This time we will try something they're less good at - telling jokes. Let's see how they get on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dac6d332-5739-4e66-9871-3bfeb42dfc94",
+   "metadata": {},
+   "source": [
+    "## Setting up your keys\n",
     "\n",
     "If you haven't done so already, you'll need to create API keys from OpenAI, Anthropic and Google.\n",
     "\n",
@@ -66,9 +76,12 @@
    "outputs": [],
    "source": [
     "# Connect to OpenAI, Anthropic and Google\n",
+    "# All 3 APIs are similar\n",
     "\n",
     "gpt = OpenAI()\n",
+    "\n",
     "claude = anthropic.Anthropic()\n",
+    "\n",
     "google.generativeai.configure()\n",
     "gemini = google.generativeai.GenerativeModel('gemini-pro')"
    ]
@@ -78,10 +91,19 @@
    "id": "748dd333-328c-4b3e-be58-a71b396fdc92",
    "metadata": {},
    "source": [
-    "### Asking LLMs to tell a joke\n",
+    "## Asking LLMs to tell a joke\n",
     "\n",
     "It turns out that LLMs don't do a great job of telling jokes! Let's compare a few models - let me know what you think in the chat.\n",
-    "Later we will be putting LLMs to better use!"
+    "Later we will be putting LLMs to better use!\n",
+    "\n",
+    "### What information is included in the API\n",
+    "\n",
+    "Typically we'll pass to the LLM:\n",
+    "- The name of the model that should be used\n",
+    "- A system message that gives overall context for the role the LLM is playing\n",
+    "- A user message that provides the actual prompt\n",
+    "\n",
+    "There are other parameters that can be used, including *temperature* which is between 0 and 2; higher for more random output; lower for more focused and deterministic.\n"
    ]
   },
   {
@@ -91,13 +113,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-3.5\n",
-    "# Temperature is between 0 and 2; higher for more random output; lower for more focused and deterministic.\n",
+    "# GPT-3.5-Turbo\n",
     "\n",
     "completion = gpt.chat.completions.create(\n",
     "    model='gpt-3.5-turbo',\n",
     "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are great at telling jokes\"},\n",
+    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
     "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
     "  ],\n",
     "    temperature=1.0,\n",
@@ -112,12 +133,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4\n",
+    "# GPT-4-Turbo\n",
     "\n",
     "completion = gpt.chat.completions.create(\n",
     "    model='gpt-4-turbo',\n",
     "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are great at telling jokes\"},\n",
+    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
     "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
     "  ],\n",
     "    temperature=1.0\n",
@@ -137,7 +158,7 @@
     "completion = gpt.chat.completions.create(\n",
     "    model='gpt-4o',\n",
     "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are great at telling jokes\"},\n",
+    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
     "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
     "  ],\n",
     "    temperature=1.0\n",
@@ -158,7 +179,7 @@
     "    model=\"claude-3-5-sonnet-20240620\",\n",
     "    max_tokens=200,\n",
     "    temperature=1.0,\n",
-    "    system=\"You are great at telling jokes\",\n",
+    "    system=\"You are an assistant that is great at telling jokes\",\n",
     "    messages=[\n",
     "        {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"},\n",
     "    ],\n",
@@ -186,6 +207,40 @@
    "id": "bb6967eb-d026-4d26-8341-d8fb2a9034ae",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# To be serious! GPT-4o with the original question\n",
+    "\n",
+    "response = gpt.chat.completions.create(\n",
+    "    model='gpt-4o',\n",
+    "    messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"You are a helpful assistant\"},\n",
+    "    {\"role\": \"user\", \"content\": \"How do I decide if a business problem is suitable for an LLM solution\"}\n",
+    "  ],\n",
+    "    temperature=1.0,\n",
+    "    stream=True\n",
+    ")\n",
+    "\n",
+    "for chunk in response:\n",
+    "    delta = chunk.choices[0].delta.content or ''\n",
+    "    print(delta, end='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b79b8fb-6c38-4034-b154-0a3f79e0572b",
+   "metadata": {},
+   "source": [
+    "## Recap: first we tried 6 Frontier LLMs through their chat interfaces\n",
+    "## Then in this notebook we called Cloud APIs\n",
+    "## Now try the 3rd way to use LLMs - direct inference - starting with llama.cpp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d638ef6f-3a72-4520-bb0d-74989f3e837b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -205,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
