--- a/llamacpp/llamacpp.ipynb
+++ b/llamacpp/llamacpp.ipynb
@@ -5,9 +5,15 @@
    "id": "1ef4de33-ff7a-4d59-bc0f-dee72df6c6d1",
    "metadata": {},
    "source": [
-    "## Direct inference of a model using llama.cpp\n",
+    "# The 3rd Way to call LLMs - Directly!\n",
     "\n",
-    "This notebook runs inference for models directly on your local box, using the open source C++ library llama.cpp."
+    "We will use a couple of approaches today:\n",
+    "\n",
+    "## 3a: direct inference of a model on your box using llama.cpp (this notebook)\n",
+    "\n",
+    "This notebook runs inference for models directly on your local box, using the open source C++ library llama.cpp.\n",
+    "\n",
+    "## 3b: running inference on a high powered GPU box on the Google Cloud (link at the bottom of this notebook)\n"
    ]
   },
   {
@@ -65,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now use llama.cpp to create the models\n",
+    "# Now use llama.cpp to create the models for Phi 3, Qwen2 and Starcoder2\n",
     "\n",
     "phi3 = Llama(model_path=phi3_model_path, n_ctx=300)\n",
     "qwen2 = Llama(model_path=qwen2_model_path, n_ctx=300)\n",
@@ -79,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# phi3\n",
+    "# phi3 tell us a joke! Remember this is a tiny model!\n",
     "\n",
     "prompt = \"[INST]Tell a light joke for a room full of data scientists[/INST]\"\n",
     "response = phi3(prompt, max_tokens=200, temperature=1, echo=True, stream=True)\n",
@@ -94,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# qwen2\n",
+    "# qwen2 tell us a joke!\n",
     "\n",
     "prompt = \"Tell a light joke for a room full of data scientists\"\n",
     "response = qwen2(prompt, max_tokens=200, temperature=1, echo=True, stream=True)\n",
@@ -109,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# starcoder2\n",
+    "# OK enough with the jokes - starcoder2 please write a function for us\n",
     "\n",
     "prompt = \"def hello_world():\\n\"\n",
     "response = starcoder2(prompt, max_tokens=100, temperature=1, echo=True, stream=True)\n",
@@ -118,9 +124,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb62a609-e1d0-4395-a89a-f3ab5ce89761",
+   "metadata": {},
+   "source": [
+    "## Finally: to try the other approach for direct inference: on a cloud box with a GPU\n",
+    "\n",
+    "Visit this Google Colab notebook:\n",
+    "https://colab.research.google.com/drive/1CRgX6RVqnWZDexXLACbq91pX2I7O7Swu?usp=sharing\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c351cf-aa74-40fd-9436-ccef9020dc58",
+   "id": "b37bdf1c-7314-4bbb-9939-155d9cb85bb6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
