--- a/project3/curator.ipynb
+++ b/project3/curator.ipynb
@@ -205,6 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I don't make a Training / Test split - if we had more training data, we would!\n",
+    "\n",
     "dataset = Dataset.from_dict({'text':data})"
    ]
   },
@@ -229,9 +231,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4691a025-9800-4e97-a20f-a65f102401f1",
+   "metadata": {},
+   "source": [
+    "## And now to head over to a Google Colab for fine-tuning in the cloud\n",
+    "\n",
+    "Follow this link for the Colab: https://colab.research.google.com/drive/19E9hoAzWKvn9c9SHqM4Xan_Ph4wNewHS?usp=sharing\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ad7aae-3e7c-4a54-8538-41fe69892a95",
+   "id": "04a6c3e0-a2e6-4115-a01a-45e79dfdb730",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
