--- a/project1/parser.ipynb
+++ b/project1/parser.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "### A simple example of a commercial use case: parsing and summarizing a resume\n",
     "\n",
-    "We will Gradio to quickly prototype this use of the OpenAI API"
+    "This directory includes a sample JSON file, along with a text version of my resume.\n",
+    "\n",
+    "We will be using a 'one shot prompt' style with OpenAI, and using Gradio to make a quick UI.\n",
+    "\n",
+    "(Reminder: I'll be stepping through this code at a high level to give you a general sense, so you can try this yourself afterwards.)"
    ]
   },
   {
@@ -25,8 +29,7 @@
     "from dotenv import load_dotenv\n",
     "import openai\n",
     "import json\n",
-    "from openai import OpenAI\n",
-    "import gradio as gr"
+    "from openai import OpenAI"
    ]
   },
   {
@@ -117,6 +120,8 @@
    "outputs": [],
    "source": [
     "# Let's try it for my resume\n",
+    "# Note the use of response_format to ensure JSON response\n",
+    "# And the use of the stream=True to have the results flow back\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "          model=MODEL,\n",
@@ -126,6 +131,7 @@
     "          ],\n",
     "        response_format={ \"type\": \"json_object\" },\n",
     "        stream=True)\n",
+    "\n",
     "for chunk in response:\n",
     "    delta = chunk.choices[0].delta.content or ''\n",
     "    print(delta, end='')"
@@ -138,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wrap this in a method\n",
+    "# Wrap this in a function (a generator)\n",
     "\n",
     "def parse(text_resume):\n",
     "    response = client.chat.completions.create(\n",
@@ -165,6 +171,8 @@
    "source": [
     "# Bringing up a view in Gradio is incredibly easy!\n",
     "\n",
+    "import gradio as gr\n",
+    "\n",
     "view = gr.Interface(\n",
     "    fn=parse,\n",
     "    inputs=[gr.Textbox(label=\"Text Resume\", lines=10)],\n",
@@ -174,6 +182,209 @@
     "\n",
     "view.launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f90f677-c6ed-4650-b731-6e2c59f2f820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A simple variation to generate a summary of this resume, a very common Gen AI use case\n",
+    "\n",
+    "summary_instructions = \"\"\"You are an assistant that can create a short summary of a candidate based on their resume.\n",
+    "The summary should be 4-5 sentences long and capture their experience and education.\"\"\"\n",
+    "\n",
+    "summary_request = \"Please summarize this candidate based on their resume:\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e03bb27-45b5-48da-b647-9fc50eb146df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate as before\n",
+    "\n",
+    "def summarize(text_resume):\n",
+    "    response = client.chat.completions.create(\n",
+    "          model=MODEL,\n",
+    "          messages=[\n",
+    "            {\"role\": \"system\", \"content\": summary_instructions},\n",
+    "            {\"role\": \"user\", \"content\": summary_request + text_resume}\n",
+    "          ],\n",
+    "        stream=True\n",
+    "        )\n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0726883b-49fd-4529-aa03-6d9f3aee3943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And in Gradio again\n",
+    "\n",
+    "view = gr.Interface(\n",
+    "    fn=summarize,\n",
+    "    inputs=[gr.Textbox(label=\"Text Resume\", lines=10)],\n",
+    "    outputs=[gr.Textbox(label=\"Summary\", lines=10)],\n",
+    "    allow_flagging=\"never\"\n",
+    ")\n",
+    "\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e281695d-ddee-4f57-a180-9c0dcc1ad197",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One more example: write a cover letter\n",
+    "\n",
+    "instructions = \"\"\"You are an assistant that can write a short cover letter that a candidate can use when applying for a job.\n",
+    "They will send the cover letter to the hiring manager, enclosing their resume\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e87f403-2020-4f4a-94ef-0c4253000443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate as before\n",
+    "\n",
+    "def cover(text_resume, text_job):\n",
+    "    response = client.chat.completions.create(\n",
+    "          model=MODEL,\n",
+    "          messages=[\n",
+    "            {\"role\": \"system\", \"content\": instructions},\n",
+    "            {\"role\": \"user\", \"content\": f'Please write a cover letter for the following candidate, applying to the following job.\\nCandidate resume:\\n\\n{text_resume}\\n\\nJob description:\\n\\n{text_job}'}\n",
+    "          ],\n",
+    "        stream=True\n",
+    "        )\n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79d3a1f-aeb4-44af-94b9-78af348be3ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And in Gradio again\n",
+    "\n",
+    "view = gr.Interface(\n",
+    "    fn=cover,\n",
+    "    inputs=[gr.Textbox(label=\"Text Resume\", lines=5), gr.Textbox(label=\"Job Description\", lines=5)],\n",
+    "    outputs=[gr.Textbox(label=\"Cover letter\", lines=12)],\n",
+    "    allow_flagging=\"never\"\n",
+    ")\n",
+    "\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4e89a0-2584-47de-a4ee-fb7c8afcdc22",
+   "metadata": {},
+   "source": [
+    "## Splitting into multiple LLM calls\n",
+    "\n",
+    "I found the cover letter was quite verbose. I experimented with a different approach. Let's break this into 2 LLM calls; first summarize the candidate, then use the summary to generate the cover letter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e24fac29-ff34-4f0b-b8ed-925009dd988e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summary_agent(text_resume):\n",
+    "    response = client.chat.completions.create(\n",
+    "          model=MODEL,\n",
+    "          messages=[\n",
+    "            {\"role\": \"system\", \"content\": summary_instructions},\n",
+    "            {\"role\": \"user\", \"content\": summary_request + text_resume}\n",
+    "          ])\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38ead582-f1b6-4e0b-9d1b-ab05bca0c8fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cover_with_summary_agent(text_resume, text_job):\n",
+    "    summary = summary_agent(text_resume)\n",
+    "    response = client.chat.completions.create(\n",
+    "          model=MODEL,\n",
+    "          messages=[\n",
+    "            {\"role\": \"system\", \"content\": instructions},\n",
+    "            {\"role\": \"user\", \"content\": f'Please write a cover letter for the following candidate, applying to the following job.\\nCandidate summary:\\n\\n{summary}\\n\\nJob description:\\n\\n{text_job}'}\n",
+    "          ],\n",
+    "        stream=True\n",
+    "        )\n",
+    "    result = \"\"\n",
+    "    for chunk in response:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f066af2-3d0d-4be5-8f07-3bc706018cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And in Gradio again\n",
+    "\n",
+    "view = gr.Interface(\n",
+    "    fn=cover_with_summary_agent,\n",
+    "    inputs=[gr.Textbox(label=\"Text Resume\", lines=5), gr.Textbox(label=\"Job Description\", lines=5)],\n",
+    "    outputs=[gr.Textbox(label=\"Cover letter\", lines=12)],\n",
+    "    allow_flagging=\"never\"\n",
+    ")\n",
+    "\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdde3468-7947-45f6-9fd5-117df3dd3be3",
+   "metadata": {},
+   "source": [
+    "# Further exercises\n",
+    "\n",
+    "1. In the original Resume Parser, try removing the one-shot example in the prompt. What happens?\n",
+    "2. Try parsing your own resume!\n",
+    "3. To be more robust, we would need to provide multiple examples in the prompt including a candidate and its JSON. Give this a try."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f295bc40-dd5d-4cf7-acd6-b1344c72eaf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -192,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
