--- a/project2/expert.ipynb
+++ b/project2/expert.ipynb
@@ -8,9 +8,11 @@
     "## Project 2: Expert\n",
     "\n",
     "### A question answering agent that is an expert in a new product being launched\n",
-    "### It's important that the answers are accurate.\n",
+    "### The agent needs to be accurate and the solution should be low cost.\n",
     "\n",
-    "This project will use RAG (Retrieval Augmented Generation) to ensure our question/answering assistant has high accuracy"
+    "This project will use RAG (Retrieval Augmented Generation) to ensure our question/answering assistant has high accuracy.\n",
+    "\n",
+    "We will be using the LangChain framework which does most of the heavy lifting for us! We'll also be using Gradio's chat interface."
    ]
   },
   {
@@ -34,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# constants\n",
+    "# price is a factor for our company, so we're going to use a low cost model\n",
     "\n",
     "MODEL = \"gpt-3.5-turbo\""
    ]
@@ -59,16 +61,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load in the document\n",
+    "# Read in the document using LangChain's loaders\n",
     "\n",
     "from langchain.document_loaders import TextLoader\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
-    "\n",
-    "text_loader = TextLoader('product.txt')\n",
+    "text_loader = TextLoader('product.md')\n",
     "loaded_data = text_loader.load()\n",
     "\n",
+    "# Split the document into chunks of 1000 characters, aiming to preserve paragraphs, and with some overlap between chunks\n",
+    "\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
     "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "split_data = text_splitter.split_documents(loaded_data)"
+    "chunks = text_splitter.split_documents(loaded_data)\n",
+    "\n",
+    "print(f\"The document was divided into {len(chunks)} chunks\")"
    ]
   },
   {
@@ -78,30 +83,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put it into a vector store\n",
-    "# FAISS is a library from Meta that allows for efficient similarity search\n",
+    "# Put the chunks of data into a Vector Store that associates a Vector Embedding with each chunk\n",
+    "# FAISS (\"Facebook AI Similarity Search\") is a library from Meta for quickly finding similar documents using Vector Embeddings\n",
     "\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
     "\n",
+    "# The OpenAiEmbeddings class in LangChain uses the OpenAI API to generate embeddings for given text\n",
+    "# We'll ask LangChain to use FAISS to create our VectorStore, using the OpenAIEmbeddings to generate embeddings\n",
+    "\n",
     "embeddings = OpenAIEmbeddings()\n",
-    "vectorstore = FAISS.from_documents(split_data, embedding=embeddings)"
+    "vectorstore = FAISS.from_documents(chunks, embedding=embeddings)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "224119f0-c2a0-49e7-ab47-5eb520545c93",
+   "id": "ff2e7687-60d4-4920-a1d7-a34b9f70a250",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from langchain.chat_models import ChatOpenAI\n",
+    "# Let's look at the vectors themselves for our Chunks\n",
+    "\n",
+    "vectors = vectorstore.index.reconstruct_n(0, vectorstore.index.ntotal)\n",
+    "dimensions = vectorstore.index.d\n",
+    "\n",
+    "print(f\"There are {len(vectors)} vectors with {dimensions:,} dimensions in the vector store\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0d45462-a818-441c-b010-b85b32bcf618",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Vector Store\n",
+    "\n",
+    "Let's take a minute to look at the documents and their embedding vectors to see what's going on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427149d5-e5d8-4abd-bb6f-7ef0333cca21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.manifold import TSNE\n",
+    "import numpy as np\n",
+    "\n",
+    "# Reduce the dimensionality of the vectors using t-SNE\n",
+    "perplexity_value = min(30, len(vectors) - 1)\n",
+    "tsne = TSNE(n_components=2, random_state=42, perplexity=perplexity_value)\n",
+    "reduced_vectors = tsne.fit_transform(vectors)\n",
+    "\n",
+    "# Plot the reduced vectors using Matplotlib\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.scatter(reduced_vectors[:, 0], reduced_vectors[:, 1], s=10)\n",
+    "\n",
+    "# Uncomment the next lines to see the text by each point\n",
+    "# for i, txt in enumerate(chunks):\n",
+    "#     plt.annotate(txt.page_content[:30], (reduced_vectors[i, 0], reduced_vectors[i, 1]))\n",
+    "\n",
+    "plt.title(\"FAISS Vector Store Visualization with t-SNE\")\n",
+    "plt.xlabel(\"Dimension 1\")\n",
+    "plt.ylabel(\"Dimension 2\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9468860b-86a2-41df-af01-b2400cc985be",
+   "metadata": {},
+   "source": [
+    "## Time to use LangChain to bring it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129c7d1e-0094-4479-9459-f9360b95f244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.memory import ConversationBufferMemory\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
     "\n",
+    "# create a new Chat with OpenAI\n",
     "llm = ChatOpenAI(temperature=0.7, model_name=MODEL)\n",
+    "\n",
+    "# set up the conversation memory for the chat\n",
     "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
+    "\n",
+    "# putting it together: set up the conversation chain with the GPT 3.5 LLM, the vector store and memory\n",
     "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=vectorstore.as_retriever(), memory=memory)"
    ]
   },
@@ -114,7 +189,7 @@
    "source": [
     "# Let's try a simple question\n",
     "\n",
-    "query = \"Please explain what ProsperAI is in a couple of sentences\"\n",
+    "query = \"Please explain what WealthAI is in a couple of sentences\"\n",
     "result = conversation_chain.invoke({\"question\": query})\n",
     "answer = result[\"answer\"]\n",
     "print(answer)"
@@ -157,9 +232,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "644753e7-17f3-4999-a37a-b6aebf1e4579",
+   "metadata": {},
+   "source": [
+    "# Exercises\n",
+    "\n",
+    "Break this example by adding information at the bottom of the product documentation with Tax information so that the wrong chunk is provided to the model and it answers the question wrongly.\n",
+    "\n",
+    "Then find a way to fix the break."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2b092a-4b20-47e1-833b-10c88280228e",
+   "id": "d7c949d4-fb8e-4b93-af40-b30dc8c0555b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -181,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
