More explanations, better prompts

--- a/llamacpp/llamacpp.ipynb
+++ b/llamacpp/llamacpp.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This notebook runs inference for models directly on your local box, using the open source C++ library llama.cpp.\n",
     "\n",
-    "## 3b: running inference on a high powered GPU box on the Google Cloud (link at the bottom of this notebook)\n"
+    "## 3b: running inference in Google Colab with Hugging Face Transformers (link at the bottom of this notebook)\n"
    ]
   },
   {
@@ -86,8 +86,12 @@
    "outputs": [],
    "source": [
     "# phi3 tell us a joke! Remember this is a tiny model!\n",
+    "# The prompt has some special characters in it - we'll cover this shortly\n",
     "\n",
-    "prompt = \"[INST]Tell a light joke for a room full of data scientists[/INST]\"\n",
+    "prompt = \"\"\"<|user|>\n",
+    "Tell a light joke for a room full of data scientists<|end|>\n",
+    "<|assistant|>\"\"\"\n",
+    "\n",
     "response = phi3(prompt, max_tokens=200, temperature=1, echo=True, stream=True)\n",
     "for chunk in response:\n",
     "    print(chunk[\"choices\"][0][\"text\"], end='')"
@@ -102,7 +106,12 @@
    "source": [
     "# qwen2 tell us a joke!\n",
     "\n",
-    "prompt = \"Tell a light joke for a room full of data scientists\"\n",
+    "prompt = \"\"\"<|im_start|>system\n",
+    "You are a helpful assistant.<|im_end|>\n",
+    "<|im_start|>user\n",
+    "Tell a light joke for a room full of data scientists<|im_end|>\n",
+    "<|im_start|>assistant\"\"\"\n",
+    "\n",
     "response = qwen2(prompt, max_tokens=200, temperature=1, echo=True, stream=True)\n",
     "for chunk in response:\n",
     "    print(chunk[\"choices\"][0][\"text\"], end='')"
@@ -129,6 +138,7 @@
    "metadata": {},
    "source": [
     "## Finally: to try the other approach for direct inference: on a cloud box with a GPU\n",
+    "### Using Hugging Face Hub and Transformers library\n",
     "\n",
     "Visit this Google Colab notebook:\n",
     "https://colab.research.google.com/drive/1CRgX6RVqnWZDexXLACbq91pX2I7O7Swu?usp=sharing\n"
