--- a/project2/expert.ipynb
+++ b/project2/expert.ipynb
@@ -77,6 +77,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77f7d2a6-ccfa-425b-a1c3-5e55b23bd013",
+   "metadata": {},
+   "source": [
+    "## A sidenote on Embeddings, and \"Auto-Encoding LLMs\"\n",
+    "\n",
+    "We will be mapping each chunk of text into a Vector that represents the meaning of the text, known as an embedding.\n",
+    "\n",
+    "OpenAI offers a model to do this, which we will use by calling their API with some LangChain code.\n",
+    "\n",
+    "This model is an example of an \"Auto-Encoding LLM\" which generates an output given a complete input.\n",
+    "It's different to all the other LLMs we've discussed today, which are known as \"Auto-Regressive LLMs\", and generate future tokens based only on past context.\n",
+    "\n",
+    "Another example of an Auto-Encoding LLMs is BERT from Google. In addition to embedding, Auto-encoding LLMs are often used for classification.\n",
+    "\n",
+    "More details in the resources."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78998399-ac17-4e28-b15f-0b5f51e6ee23",
@@ -89,7 +108,11 @@
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
     "\n",
-    "# The OpenAiEmbeddings class in LangChain uses the OpenAI API to generate embeddings for given text\n",
+    "# A sidenote\n",
+    "# The OpenAiEmbeddings class in LangChain uses the OpenAI API.\n",
+    "# OpenAI provides an Embeddings model to turn text into emdeddings\n",
+    "# This is an example of an \"Auto-Encoding LLM' like Bert\n",
+    "# All other models in this class are \"Auto-Regressive\" and generate future tokens based on past context\n",
     "# We'll ask LangChain to use FAISS to create our VectorStore, using the OpenAIEmbeddings to generate embeddings\n",
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
@@ -132,7 +155,7 @@
     "from sklearn.manifold import TSNE\n",
     "import numpy as np\n",
     "\n",
-    "# Reduce the dimensionality of the vectors using t-SNE\n",
+    "# Reduce the dimensionality of the vectors using t-SNE (\"t-distributed Stochastic Neighbor Embedding\")\n",
     "perplexity_value = min(30, len(vectors) - 1)\n",
     "tsne = TSNE(n_components=2, random_state=42, perplexity=perplexity_value)\n",
     "reduced_vectors = tsne.fit_transform(vectors)\n",
@@ -242,14 +265,6 @@
     "\n",
     "Then find a way to fix the break."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7c949d4-fb8e-4b93-af40-b30dc8c0555b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
