Updated with new projects

--- a/project4 - Resume parser/parser.ipynb
+++ b/project4 - Resume parser/parser.ipynb
@@ -290,7 +290,7 @@
     "view = gr.Interface(\n",
     "    fn=cover,\n",
     "    inputs=[gr.Textbox(label=\"Text Resume\", lines=5), gr.Textbox(label=\"Job Description\", lines=5)],\n",
-    "    outputs=[gr.Textbox(label=\"Cover letter\", lines=12)],\n",
+    "    outputs=[gr.Textbox(label=\"Cover letter\", lines=20)],\n",
     "    allow_flagging=\"never\"\n",
     ")\n",
     "\n",
@@ -302,7 +302,7 @@
    "id": "bf4e89a0-2584-47de-a4ee-fb7c8afcdc22",
    "metadata": {},
    "source": [
-    "## Splitting into multiple LLM calls\n",
+    "## Splitting into multiple LLM calls - a light version of Agents\n",
     "\n",
     "I found the cover letter was quite verbose. I experimented with a different approach. Let's break this into 2 LLM calls; first summarize the candidate, then use the summary to generate the cover letter."
    ]
@@ -337,7 +337,7 @@
     "          model=MODEL,\n",
     "          messages=[\n",
     "            {\"role\": \"system\", \"content\": instructions},\n",
-    "            {\"role\": \"user\", \"content\": f'Please write a cover letter for the following candidate, applying to the following job.\\nCandidate summary:\\n\\n{summary}\\n\\nJob description:\\n\\n{text_job}'}\n",
+    "            {\"role\": \"user\", \"content\": f'Please write a short cover letter for the following candidate, applying to the following job. Keep the cover letter to 2 paragraphs maximum.\\nCandidate summary:\\n\\n{summary}\\n\\nJob description:\\n\\n{text_job}'}\n",
     "          ],\n",
     "        stream=True\n",
     "        )\n",
@@ -375,7 +375,8 @@
     "\n",
     "1. In the original Resume Parser, try removing the one-shot example in the prompt. What happens?\n",
     "2. Try parsing your own resume!\n",
-    "3. To be more robust, we would need to provide multiple examples in the prompt including a candidate and its JSON. Give this a try."
+    "3. To be more robust, we would need to provide multiple examples in the prompt including a candidate and its JSON. Give this a try.\n",
+    "4. OpenAI have recently announced the ability to specify a JSON schema to be used for the response. Find out about this and add it to the example! (And if you'd like to show me, please submit a PR so I can add it for the future!)"
    ]
   },
   {
@@ -403,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
