--- a/project6 - simple RAG example with FAISS/expert.ipynb
+++ b/project6 - simple RAG example with FAISS/expert.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# price is a factor for our company, so we're going to use a low cost model\n",
     "\n",
-    "MODEL = \"gpt-3.5-turbo\""
+    "MODEL = \"gpt-4o-mini\""
    ]
   },
   {
@@ -165,8 +165,8 @@
     "plt.scatter(reduced_vectors[:, 0], reduced_vectors[:, 1], s=10)\n",
     "\n",
     "# Uncomment the next lines to see the text by each point\n",
-    "# for i, txt in enumerate(chunks):\n",
-    "#     plt.annotate(txt.page_content[:30], (reduced_vectors[i, 0], reduced_vectors[i, 1]))\n",
+    "for i, txt in enumerate(chunks):\n",
+    "    plt.annotate(txt.page_content[:30], (reduced_vectors[i, 0], reduced_vectors[i, 1]))\n",
     "\n",
     "plt.title(\"FAISS Vector Store Visualization with t-SNE\")\n",
     "plt.xlabel(\"Dimension 1\")\n",
@@ -255,6 +255,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b55e9abb-e1da-46c5-acba-911868aee329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.callbacks import StdOutCallbackHandler\n",
+    "\n",
+    "# Create the conversation\n",
+    "llm = ChatOpenAI(temperature=0.7, model_name=MODEL)\n",
+    "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
+    "conversation_chain = ConversationalRetrievalChain.from_llm(\n",
+    "    llm=llm, \n",
+    "    retriever=vectorstore.as_retriever(), \n",
+    "    memory=memory,\n",
+    "    callbacks=[StdOutCallbackHandler()]\n",
+    ")\n",
+    "\n",
+    "# Try it out\n",
+    "query = \"Does WealthAI offer tax advice\"\n",
+    "result = conversation_chain.invoke({\"question\": query})\n",
+    "answer = result[\"answer\"]\n",
+    "print(\"\\nAnswer:\", answer)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "644753e7-17f3-4999-a37a-b6aebf1e4579",
    "metadata": {},
@@ -283,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
