--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "If you haven't done so already, you'll need to create API keys from OpenAI, Anthropic and Google.\n",
     "\n",
-    "For OpenAI, visit https://openai.com/api/\n",
-    "For Anthropic, visit https://console.anthropic.com/\n",
-    "For Google, visit https://ai.google.dev/gemini-api\n",
+    "For OpenAI, visit https://openai.com/api/  \n",
+    "For Anthropic, visit https://console.anthropic.com/  \n",
+    "For Google, visit https://ai.google.dev/gemini-api  \n",
     "\n",
     "When you get your API keys, you need to set them as environment variables.\n",
     "\n",
@@ -50,7 +50,8 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import google.generativeai\n",
-    "import anthropic"
+    "import anthropic\n",
+    "from IPython.display import Markdown, display, update_display"
    ]
   },
   {
@@ -98,12 +99,36 @@
     "\n",
     "### What information is included in the API\n",
     "\n",
-    "Typically we'll pass to the LLM:\n",
+    "Typically we'll pass to the API:\n",
     "- The name of the model that should be used\n",
     "- A system message that gives overall context for the role the LLM is playing\n",
     "- A user message that provides the actual prompt\n",
     "\n",
-    "There are other parameters that can be used, including *temperature* which is between 0 and 2; higher for more random output; lower for more focused and deterministic.\n"
+    "There are other parameters that can be used, including *temperature* which is typically between 0 and 1; higher for more random output; lower for more focused and deterministic.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdfc7248-ba02-4e00-9479-9435ec76721d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_message = \"You are an assistant that is great at telling jokes\"\n",
+    "user_prompt = \"Tell a light-hearted joke for a room full of data scientists\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e10bd8f-98c0-4379-b69b-f1607ef257d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\n",
+    "    {\"role\": \"system\", \"content\": system_message},\n",
+    "    {\"role\": \"user\", \"content\": user_prompt}\n",
+    "  ]"
    ]
   },
   {
@@ -115,14 +140,7 @@
    "source": [
     "# GPT-3.5-Turbo\n",
     "\n",
-    "completion = gpt.chat.completions.create(\n",
-    "    model='gpt-3.5-turbo',\n",
-    "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
-    "  ],\n",
-    "    temperature=1.0,\n",
-    ")\n",
+    "completion = gpt.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
     "print(completion.choices[0].message.content)"
    ]
   },
@@ -133,15 +151,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GPT-4-Turbo\n",
+    "# GPT-4o-mini\n",
+    "# Temperature setting controls creativity\n",
     "\n",
     "completion = gpt.chat.completions.create(\n",
-    "    model='gpt-4-turbo',\n",
-    "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
-    "  ],\n",
-    "    temperature=1.0\n",
+    "    model='gpt-4o-mini',\n",
+    "    messages=prompts,\n",
+    "    temperature=0.7\n",
     ")\n",
     "print(completion.choices[0].message.content)"
    ]
@@ -157,11 +173,8 @@
     "\n",
     "completion = gpt.chat.completions.create(\n",
     "    model='gpt-4o',\n",
-    "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are an assistant that is great at telling jokes\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"}\n",
-    "  ],\n",
-    "    temperature=1.0\n",
+    "    messages=prompts,\n",
+    "    temperature=0.7\n",
     ")\n",
     "print(completion.choices[0].message.content)"
    ]
@@ -174,18 +187,45 @@
    "outputs": [],
    "source": [
     "# Claude 3.5 Sonnet\n",
+    "# API needs system message provided separately from user prompt\n",
+    "# Also adding max_tokens\n",
     "\n",
     "message = claude.messages.create(\n",
     "    model=\"claude-3-5-sonnet-20240620\",\n",
     "    max_tokens=200,\n",
-    "    temperature=1.0,\n",
-    "    system=\"You are an assistant that is great at telling jokes\",\n",
+    "    temperature=0.7,\n",
+    "    system=system_message,\n",
     "    messages=[\n",
-    "        {\"role\": \"user\", \"content\": \"Tell a light joke for a room full of data scientists\"},\n",
+    "        {\"role\": \"user\", \"content\": user_prompt},\n",
     "    ],\n",
     ")\n",
     "\n",
     "print(message.content[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d8d0600-ab86-49c5-b7a4-0f3c4ee5a654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Claude 3.5 Sonnet again\n",
+    "# Now let's add in streaming back results\n",
+    "\n",
+    "result = claude.messages.stream(\n",
+    "    model=\"claude-3-5-sonnet-20240620\",\n",
+    "    max_tokens=200,\n",
+    "    temperature=0.7,\n",
+    "    system=system_message,\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": user_prompt},\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "with result as stream:\n",
+    "    for text in stream.text_stream:\n",
+    "            print(text, end=\"\", flush=True)"
    ]
   },
   {
@@ -197,8 +237,23 @@
    "source": [
     "# Gemini\n",
     "\n",
-    "response = gemini.generate_content(\"Tell a light joke for a room full of data scientists\")\n",
+    "response = gemini.generate_content(user_prompt)\n",
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd9e82c-96a5-4480-aeb4-3a79ac919a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To be serious! GPT-4o-mini with the original question\n",
+    "\n",
+    "prompts = [\n",
+    "    {\"role\": \"system\", \"content\": \"You are a helpful assistant\"},\n",
+    "    {\"role\": \"user\", \"content\": \"How do I decide if a business problem is suitable for an LLM solution?\"}\n",
+    "  ]"
    ]
   },
   {
@@ -208,21 +263,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To be serious! GPT-4o with the original question\n",
+    "# Let's have it stream back results\n",
     "\n",
-    "response = gpt.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
-    "    messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are a helpful assistant\"},\n",
-    "    {\"role\": \"user\", \"content\": \"How do I decide if a business problem is suitable for an LLM solution\"}\n",
-    "  ],\n",
-    "    temperature=1.0,\n",
+    "stream = gpt.chat.completions.create(\n",
+    "    model='gpt-4o-mini',\n",
+    "    messages=prompts,\n",
+    "    temperature=0.7,\n",
     "    stream=True\n",
     ")\n",
     "\n",
-    "for chunk in response:\n",
+    "for chunk in stream:\n",
     "    delta = chunk.choices[0].delta.content or ''\n",
     "    print(delta, end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d9e2b6-41a3-4b9c-be50-647e6ad83b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Did you notice it responded in markdown? We can show that nicely:\n",
+    "\n",
+    "stream = gpt.chat.completions.create(\n",
+    "    model='gpt-4o',\n",
+    "    messages=prompts,\n",
+    "    temperature=0.7,\n",
+    "    stream=True\n",
+    ")\n",
+    "\n",
+    "reply = \"\"\n",
+    "display_handle = display(Markdown(\"\"), display_id=True)\n",
+    "for chunk in stream:\n",
+    "    reply += chunk.choices[0].delta.content or ''\n",
+    "    reply = reply.replace(\"```\",\"\").replace(\"markdown\",\"\")\n",
+    "    update_display(Markdown(reply), display_id=display_handle.display_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82dbe4b9-c826-43d7-a598-61efefb637eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And just to show you how easy it is: let's generate an image\n",
+    "\n",
+    "from IPython.display import Image, display\n",
+    "import base64\n",
+    "\n",
+    "response = gpt.images.generate(\n",
+    "  model=\"dall-e-3\",\n",
+    "  prompt=f\"A photorealistic 3d image that represents the power of a Frontier LLM in solving real business use cases\",\n",
+    "  size=\"1024x1024\",\n",
+    "  quality=\"standard\",\n",
+    "  n=1,\n",
+    "  response_format=\"b64_json\"\n",
+    ")\n",
+    "\n",
+    "# Extract the Base64 image data from the response\n",
+    "image_base64 = response.data[0].b64_json\n",
+    "\n",
+    "# Decode the Base64 string into bytes\n",
+    "image_data = base64.b64decode(image_base64)\n",
+    "\n",
+    "# Display the image in the notebook\n",
+    "display(Image(image_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c22df240-0717-4cd7-a340-de1874ce9c0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = gpt.images.generate(\n",
+    "  model=\"dall-e-3\",\n",
+    "  prompt=f\"A vibrant, pop-art style image that represents the power of a Frontier LLM in solving real business use cases\",\n",
+    "  size=\"1024x1024\",\n",
+    "  quality=\"standard\",\n",
+    "  n=1,\n",
+    "  response_format=\"b64_json\"\n",
+    ")\n",
+    "\n",
+    "# Extract the Base64 image data from the response\n",
+    "image_base64 = response.data[0].b64_json\n",
+    "\n",
+    "# Decode the Base64 string into bytes\n",
+    "image_data = base64.b64decode(image_base64)\n",
+    "\n",
+    "# Display the image in the notebook\n",
+    "display(Image(image_data))"
    ]
   },
   {
@@ -232,7 +365,9 @@
    "source": [
     "## Recap: first we tried 6 Frontier LLMs through their chat interfaces\n",
     "## Then in this notebook we called Cloud APIs\n",
-    "## Now try the 3rd way to use LLMs - direct inference - starting with llama.cpp"
+    "## Now try the 3rd way to use LLMs - direct inference of Open Source Models with HuggingFace\n",
+    "\n",
+    "Visit this Google Colab notebook: https://colab.research.google.com/drive/1CRgX6RVqnWZDexXLACbq91pX2I7O7Swu?usp=sharing"
    ]
   },
   {
@@ -260,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
