--- a/project5 - Code generator/curator.ipynb
+++ b/project5 - Code generator/curator.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Load environment variables in a file called .env\n",
-    "\n",
+    "from datasets import load_dataset, Dataset\n",
     "load_dotenv()\n",
     "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-hf-token-if-not-using-env')"
    ]
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
