--- a/project7 - llamacpp local inference/llamacpp.ipynb
+++ b/project7 - llamacpp local inference/llamacpp.ipynb
@@ -5,15 +5,21 @@
    "id": "1ef4de33-ff7a-4d59-bc0f-dee72df6c6d1",
    "metadata": {},
    "source": [
-    "# The 3rd Way to call LLMs - Directly!\n",
+    "# Another way to call LLMs - directly on your box using Llama.cpp\n",
     "\n",
-    "We will use a couple of approaches today:\n",
+    "This notebook runs inference for models directly on your local box, using the open source C++ library llama.cpp."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fcd7d28-148c-47b2-ad1b-35ce28557bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, install the llama-cpp library. Do some googling if you have problems with this install, or contact me\n",
     "\n",
-    "## 3a: direct inference of a model on your box using llama.cpp (this notebook)\n",
-    "\n",
-    "This notebook runs inference for models directly on your local box, using the open source C++ library llama.cpp.\n",
-    "\n",
-    "## 3b: running inference in Google Colab with Hugging Face Transformers (link at the bottom of this notebook)\n"
+    "!pip install llama-cpp-python"
    ]
   },
   {
@@ -23,6 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If any problems with this import, some investigating may be required..\n",
+    "\n",
     "from llama_cpp import Llama"
    ]
   },
@@ -169,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
