--- a/intro/joke.ipynb
+++ b/intro/joke.ipynb
@@ -147,6 +147,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f5b71af-f193-4e53-b633-2c546f518dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\n",
+    "    {\"role\": \"system\", \"content\": system_message},\n",
+    "    {\"role\": \"user\", \"content\": user_prompt},\n",
+    "    {\"role\": \"assistant\", \"content\": \"Why did the statistician bring a ladder to the bar?\\n\\nBecause he heard the drinks were on the house!\"},\n",
+    "    {\"role\": \"user\", \"content\": \"Can you explain why that joke is relevant to Data Scientists?\"}\n",
+    "  ]\n",
+    "completion = gpt.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a66e6861-1b58-4779-b525-5925a9aea3b7",
    "metadata": {},
    "outputs": [],
@@ -395,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
