--- a/project1 - Airline AI Assistant/assistant.ipynb
+++ b/project1 - Airline AI Assistant/assistant.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "system_message = \"You are a helpful assistant for an Airline called FlightAI. \"\n",
-    "system_message += \"Give short courteous answers, no more than 1 sentence. \"\n",
+    "system_message += \"Give short, courteous answers, no more than 1 sentence. \"\n",
     "system_message += \"Always be accurate. If you don't know the answer, say so.\""
    ]
   },
@@ -442,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
