--- a/project2 - Expert knowledge worker/expert.ipynb
+++ b/project2 - Expert knowledge worker/expert.ipynb
@@ -204,6 +204,7 @@
    "source": [
     "# We humans find it easier to visalize things in 2D!\n",
     "# Reduce the dimensionality of the vectors to 2D using t-SNE\n",
+    "# (t-distributed stochastic neighbor embedding)\n",
     "\n",
     "tsne = TSNE(n_components=2, random_state=42)\n",
     "reduced_vectors = tsne.fit_transform(vectors)\n",
@@ -285,7 +286,7 @@
     "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
     "\n",
     "# how many chunks to provide in each prompt\n",
-    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 20})\n",
+    "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 25})\n",
     "\n",
     "# putting it together: set up the conversation chain with the GPT 3.5 LLM, the vector store and memory\n",
     "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
@@ -402,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
